@@ -386,6 +386,7 @@ g_error_free
 g_error_copy
 g_error_matches
 g_set_error
+g_set_error_literal
 g_propagate_error
 g_clear_error
 g_prefix_error
