@@ -1,3 +1,10 @@
+2008-06-16  Christian Persch  <chpe@gnome.org>
+
+	* docs/reference/glib/glib-sections.txt:
+	* glib/gerror.c:
+	* glib/gerror.h:
+	* glib/glib.symbols: Add g_set_error_literal. Bug #535947.
+
 2008-06-16  Michael Natterer  <mitch@imendio.com>
 
 	* glib/goption.c (dgettext_swapped): changed return value to
